--- a/client/index.html
+++ b/client/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script src="qry.js"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <title>Tuna-supplychain</title>
 </head>
 <body>
