--- a/client/app.html
+++ b/client/app.html
@@ -5,6 +5,7 @@
 <title>Tuna-supplychain</title>
 </head>
 <body>
+<h2>Query Tuna</h2>
 <form action="/api/queryTuna" method="get">
         Tuna Id: <input name="tunaId" type="text" /> <br />
         <input type="submit" />
