--- a/client/app.html
+++ b/client/app.html
@@ -16,7 +16,7 @@
         <input type="submit" />
     </form>
 <h2>Query All tuna</h2>
-<form action="/api/queryAllTuna" method="get">
+<form action="/api/queryAllTunas" method="get">
         <input type="submit" />
     </form>
 <h2>Add Tuna</h2>
