--- a/client/app.html
+++ b/client/app.html
@@ -10,7 +10,7 @@
         <input type="submit" />
     </form>
 <h2>Change Tuna Owner</h2>
-<form action="/api/changeTunaOwner" method="put">
+<form action="/api/changeTunaOwner" method="post">
         Tuna Id: <input name="tunaId" type="text" /> <br />
         New Owner: <input name="owner" type="text" /> <br />
         <input type="submit" />
