--- a/client/app.html
+++ b/client/app.html
@@ -2,24 +2,47 @@
 <html>
 <head>
 <title>Tuna-supplychain</title>
+<style>
+input[type=submit]{background-color: #008CBA;} 
+input[type=submit]:hover {
+  background-color: #45a049;
+}
+input[type=text], select {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+div {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+}
+
 </head>
 <body>
-<h2>Query Tuna</h2>
+<div style="text-align:center;">
+<h2>Tuna Fishing Supplychain</h2>
+<h4>Query Tuna</h4>
 <form action="/api/queryTuna" method="get">
         Tuna Id: <input name="tunaId" type="text" /> <br />
         <input type="submit" />
     </form>
-<h2>Change Tuna Owner</h2>
+<h4>Change Tuna Owner</h4>
 <form action="/api/changeTunaOwner" method="post">
         Tuna Id: <input name="tunaId" type="text" /> <br />
         New Owner: <input name="owner" type="text" /> <br />
         <input type="submit" />
     </form>
-<h2>Query All tuna</h2>
+<h4>Query All tuna</h4>
 <form action="/api/queryAllTunas" method="get">
         <input type="submit" />
     </form>
-<h2>Add Tuna</h2>
+<h4>Add Tuna</h4>
 <form action="/api/addTuna" method="post">
         Tuna Id: <input name="addTunaId" type="text" /> <br />
         Vessel: <input name="vessel" type="text" /> <br />
@@ -28,6 +51,6 @@
         Holder: <input name="holder" type="text" /> <br />
        <input type="submit" />
     </form>
-
+<div>
 </body>
 </html>
