--- a/client/app.html
+++ b/client/app.html
@@ -9,7 +9,7 @@ input[type=submit]:hover {
 }
 input[type=text], select {
   width: 100%;
-  padding: 12px 20px;
+  padding: 8px 10px;
   margin: 8px 0;
   display: inline-block;
   border: 1px solid #ccc;
@@ -22,7 +22,7 @@ div {
   background-color: #f2f2f2;
   padding: 20px;
 }
-
+</style>
 </head>
 <body>
 <div style="text-align:center;">
